--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ckeditor5-build-classic-plus",
-  "version": "12.4.4",
+  "version": "12.4.5",
   "description": "The classic editor build of CKEditor 5 – the best browser-based rich text editor. This specific build includes more plugins. See the README document for more information.",
   "keywords": [
     "ckeditor5-build",
@@ -24,7 +24,9 @@
     "Highlight",
     "PendingActions",
     "Alignment",
-    "SimpleUploadAdapter"
+    "SimpleUploadAdapter",
+	"IndentBlock",
+	"Font"
   ],
   "main": "./build/ckeditor.js",
   "files": [
@@ -44,6 +46,7 @@
     "@ckeditor/ckeditor5-easy-image": "^11.0.5",
     "@ckeditor/ckeditor5-editor-classic": "^12.1.4",
     "@ckeditor/ckeditor5-essentials": "^11.0.5",
+    "@ckeditor/ckeditor5-font": "^11.2.2",
     "@ckeditor/ckeditor5-heading": "^11.0.5",
     "@ckeditor/ckeditor5-highlight": "^11.0.5",
     "@ckeditor/ckeditor5-image": "^14.0.0",
