--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ckeditor5-build-classic-plus",
-  "version": "12.4.5",
+  "version": "12.4.6",
   "description": "The classic editor build of CKEditor 5 – the best browser-based rich text editor. This specific build includes more plugins. See the README document for more information.",
   "keywords": [
     "ckeditor5-build",
@@ -26,7 +26,8 @@
     "Alignment",
     "SimpleUploadAdapter",
     "IndentBlock",
-    "Font"
+    "Font",
+    "ImageResize"
   ],
   "main": "./build/ckeditor.js",
   "files": [
