--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ckeditor5-build-classic-plus",
+  "name": "ckeditor5-build-classic-rajasa",
   "version": "13.0.0",
   "description": "The classic editor build of CKEditor 5 – the best browser-based rich text editor. This specific build includes more plugins. See the README document for more information.",
   "keywords": [
@@ -40,6 +40,7 @@
     "@ckeditor/ckeditor5-autosave": "^15.0.0",
     "@ckeditor/ckeditor5-basic-styles": "^15.0.0",
     "@ckeditor/ckeditor5-block-quote": "^15.0.0",
+    "@ckeditor/ckeditor5-code-block": "^24.0.0",
     "@ckeditor/ckeditor5-ckfinder": "^15.0.0",
     "@ckeditor/ckeditor5-core": "^15.0.0",
     "@ckeditor/ckeditor5-dev-utils": "^12.0.0",
