--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ckeditor5-build-classic-plus",
+  "name": "ckeditor5-build-custom",
   "version": "13.0.0",
   "description": "The classic editor build of CKEditor 5 – the best browser-based rich text editor. This specific build includes more plugins. See the README document for more information.",
   "keywords": [
